--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
@@ -97,17 +97,17 @@
                             <p>120 assit</p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Select</button>
+                            <button class="btn btn-primary" onclick="addPlayer(this)">Select</button>
                           </div>
                         </div>
                     </div>
                 </div>
                 <!-- ... -->
-                <div class="grid grid-cols-1 gap-4">
+                <div class="grid grid-cols-1 row-span-2 gap-4">
                     <div class="bg-fuchsia-500 rounded-md text-black">
-                        <h2 class="text-2xl text-center font-medium">Selected Players:</h2>
+                        <h2 class="text-2xl text-center font-medium">Selected Players: <span class="text-violet-900">0</span></h2>
                         <hr class="border-black">
-                        <ol class="list-decimal">
+                        <ol id="selected-players" class="list-decimal list-inside text-lg pl-3">
                             
                         </ol>
                     </div>
@@ -140,5 +140,6 @@
             </div>
         </section>
     </main>
+    <script src="./JS/index.js"></script>
 </body>
 </html>
