added alert when player is 5

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <!-- ... -->
                 <div class="grid grid-cols-1 row-span-2 gap-4">
                     <div class="bg-fuchsia-500 rounded-md text-black">
-                        <h2 class="text-2xl text-center font-medium">Selected Players: <span class="text-violet-900">0</span></h2>
+                        <h2 class="text-2xl text-center font-medium">Selected Players:</h2>
                         <hr class="border-black">
                         <ol id="selected-players" class="list-decimal list-inside text-lg pl-3">
                             
