--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- ... -->
+                <!-- Players Budjet -->
                 <div class="grid grid-cols-1 row-span-2 gap-4">
                     <div class="bg-fuchsia-500 rounded-md text-black">
                         <h2 class="text-2xl text-center font-medium">Selected Players:</h2>
@@ -117,7 +117,7 @@
                           <h3 class="text-lg font-medium">Per Player: </h3>
                           <input type="text" placeholder="1000" class="input input-bordered w-1/2 max-w-xs text-white" />
                         </div>
-                        <button class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate</button>
+                        <button id="calculate-btn" class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate</button>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Player Expenses: </h3>
                           <h3 class="text-lg font-medium">$<span>5000</span></h3>
