--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                         <h2 class="text-2xl text-center font-medium">Budget :</h2>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Per Player: </h3>
-                          <input type="text" placeholder="1000" class="input input-bordered w-1/2 max-w-xs text-white" />
+                          <input id="per-player" type="text" placeholder="1000" class="input input-bordered w-1/2 max-w-xs text-white" />
                         </div>
                         <button id="calculate-btn" class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate</button>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Player Expenses: </h3>
-                          <h3 class="text-lg font-medium">$<span>5000</span></h3>
+                          <h3 class="text-lg font-medium">$<span id="players-expenses">5000</span></h3>
                         </div>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Manager: </h3>
