total calculate done

--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
                         </div>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Manager: </h3>
-                          <input type="text" placeholder="2000" class="input input-bordered w-1/2 max-w-xs text-white" />
+                          <input id="manager-salary" type="text" placeholder="2000" class="input input-bordered w-1/2 max-w-xs text-white" />
                         </div>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Coach: </h3>
-                          <input type="text" placeholder="4000" class="input input-bordered w-1/2 max-w-xs text-white" />
+                          <input id="coach-salary" type="text" placeholder="4000" class="input input-bordered w-1/2 max-w-xs text-white" />
                         </div>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Total: </h3>
                           <h3 class="text-lg font-medium text-red-600">$<span>11000</span></h3>
                         </div>
-                        <button class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate Total</button>
+                        <button id="total-calculate-btn" class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate Total</button>
                     </div>
                 </div>
             </div>
