--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top FIVE Player</title>
+    <!-- daisiui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- stylesheet css -->
     <link rel="stylesheet" href="style.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/d13380bb36.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header w-auto h-96 flex items-center justify-center">
@@ -140,6 +145,15 @@
             </div>
         </section>
     </main>
+    <!-- footer -->
+    <footer class="footer items-center p-4 bg-neutral text-neutral-content">
+      <p>Copyright © 2022 - All right reserved</p>
+      <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+        <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+        <a href="www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+        <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+    </footer>
     <script src="./JS/index.js"></script>
 </body>
 </html>
