--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
                         </div>
                     </div>
                 </div>
+                
                 <!-- Players Budjet -->
+
                 <div class="grid grid-cols-1 row-span-2 gap-4">
                     <div class="bg-fuchsia-500 rounded-md text-black">
-                        <h2 class="text-2xl text-center font-medium">Selected Players:</h2>
+                        <h2 class="text-2xl text-center font-medium">Select Players(max-5):</h2>
                         <hr class="border-black">
                         <ol id="selected-players" class="list-decimal list-inside text-lg pl-3">
                             
@@ -135,11 +137,11 @@
                           <h3 class="text-lg font-medium">Coach: </h3>
                           <input id="coach-salary" type="text" placeholder="4000" class="input input-bordered w-1/2 max-w-xs text-white" />
                         </div>
+                        <button id="total-calculate-btn" class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate Total</button>
                         <div class="flex justify-evenly items-center mt-4">
                           <h3 class="text-lg font-medium">Total: </h3>
                           <h3 class="text-lg font-medium text-red-600">$<span id="total-expenses">11000</span></h3>
                         </div>
-                        <button id="total-calculate-btn" class=" btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-600 rounded-xl my-4 block mx-auto font-medium text-white text-xl">Calculate Total</button>
                     </div>
                 </div>
             </div>
